--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon  --exec babel-node ./src/app.js"
+    "start": "babel-node ./src/app.js",
+    "dev": "nodemon --exec npm start"
   },
   "author": "",
   "license": "ISC",
@@ -21,7 +22,7 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
-    "@babel/core": "^7.20.2",
+    "@babel/core": "^7.20.5",
     "@babel/node": "^7.20.5",
     "@babel/preset-env": "^7.20.2"
   }
