--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
     "chalk": "^2.4.2",
     "cors": "^2.8.5",
     "detect-port": "^1.5.1",
