--- a/.babelrc
+++ b/.babelrc
@@ -7,7 +7,8 @@
           "node": "current"
         }
       }
-    ]
+    ],
+    "@babel/preset-env"
   ],
   "plugins": [
     "@babel/plugin-proposal-class-properties",
