--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel-node ./src/app.js",
+    "build": "npm run clean && npm run build-babel",
+    "build-babel": "./node_modules/.bin/babel -d ./build ./src",
+    "clean": "rm -rf build && mkdir build",
+    "start": "node ./src/app.js",
     "dev": "nodemon --exec npm start"
   },
   "author": "",
