--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon  --exec babel-node ./src/app.js"
+    "dev": "nodemon  --exec babel-node ./src/app.js",
+    "start": "babel-node ./src/app.js"
   },
   "author": "",
   "license": "ISC",
