--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon  --exec babel-node ./src/app.js",
     "build:server": "babel src -d build",
-    "build": "npm run build:server && npm run build:assets",
+    "build": "npm run build:server",
     "start": "node build/app.js"
   },
   "author": "",
