--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon  --exec babel-node ./src/app.js",
+    "dev": "nodemon --exec babel-node --experimental-modules ./src/app.js",
     "build:server": "babel src -d build",
     "build": "npm run build:server",
-    "start": "node build/app.js"
+    "start": "node --experimental-modules build/app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.0",
     "babel": "^6.23.0",
+    "bcrypt": "^5.1.0",
     "chalk": "^2.4.2",
     "cors": "^2.8.5",
     "detect-port": "^1.5.1",
