--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "detect-port": "^1.5.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^6.8.0",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20"
   },
