--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "bcrypt": "^5.1.0",
     "chalk": "^2.4.2",
     "cors": "^2.8.5",
+    "date-fns": "^2.21.1",
+    "date-fns-tz": "^1.1.4",
     "detect-port": "^1.5.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
