--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel": "^6.23.0",
     "bcrypt": "^5.1.0",
     "chalk": "^2.4.2",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "date-fns": "^2.21.1",
     "date-fns-tz": "^1.1.4",
@@ -24,7 +25,8 @@
     "express": "^4.18.2",
     "mongoose": "^6.8.0",
     "nodemailer": "^6.8.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "puppeteer": "^19.4.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
