--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "mongoose": "^6.8.0",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
-    "puppeteer": "^19.4.1"
+    "puppeteer": "^19.4.1",
+    "user-agents": "^1.0.1249"
   },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
