--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "puppeteer": "^19.4.1",
+    "puppeteer-core": "^19.4.1",
     "user-agents": "^1.0.1249"
   },
   "devDependencies": {
