--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^5.1.0",
     "chalk": "^2.4.2",
     "cheerio": "^1.0.0-rc.12",
+    "chromium": "^3.0.3",
     "cors": "^2.8.5",
     "date-fns": "^2.21.1",
     "date-fns-tz": "^1.1.4",
@@ -27,6 +28,7 @@
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "puppeteer": "^16.2.0",
+    "puppeteer-core": "^19.4.1",
     "user-agents": "^1.0.1249"
   },
   "devDependencies": {
