--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chalk": "^2.4.2",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "date-fns": "^2.21.1",
     "date-fns-tz": "^1.1.4",
     "detect-port": "^1.5.1",
