--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.1.0",
     "chalk": "^2.4.2",
     "cheerio": "^1.0.0-rc.12",
+    "chromium": "^3.0.3",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.21.1",
@@ -29,6 +30,7 @@
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "puppeteer": "^16.2.0",
+    "puppeteer-core": "^20.5.0",
     "toad-scheduler": "^2.2.0",
     "user-agents": "^1.0.1249",
     "xlsx": "^0.18.5"
