--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.8.0",
+    "node-telegram-bot-api": "^0.61.0",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "puppeteer": "^16.2.0",
