--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": " nodemon --exec babel-node ./src/app.js",
+    "dev": "nodemon --exec babel-node ./src/app.js",
     "build:server": "babel src -d build",
     "build": "npm run build:server",
-    "start": "node build/app.js"
+    "start": "forever node build/app.js"
   },
   "author": "",
   "license": "ISC",
