--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chalk": "^2.4.2",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
+    "croner": "^8.0.2",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.21.1",
     "date-fns-tz": "^1.1.4",
@@ -26,6 +27,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.8.0",
+    "node-schedule": "^2.1.1",
     "node-telegram-bot-api": "^0.61.0",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
